Just one comment in devDockerfile

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -21,6 +21,7 @@ ENV GOPATH=/go
 ENV PATH=$GOPATH/bin:/usr/local/go/bin:$PATH
 RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
 
+# Script for compiling the go project.
 RUN printf ' #!/bin/bash\n\
 set -e\n\
 cd $GOPATH/src\n\
