A working docker version

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -4,17 +4,27 @@ FROM ubuntu:24.04
 ARG GO_VERSION
 ENV GO_VERSION=${GO_VERSION}
 
-#Installation phase
-RUN apt-get update
-RUN apt-get install -y wget git gcc
+# Installation phase
+RUN apt-get update && apt-get install -y \
+    wget \
+    git \
+    gcc \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN wget -P /tmp "https://dl.google.com/go/go${GO_VERSION}.linux-amd64.tar.gz"
-
-RUN tar -C /usr/local -xzf "/tmp/go${GO_VERSION}.linux-amd64.tar.gz"
-
-# Post install clean up
-RUN rm "/tmp/go${GO_VERSION}.linux-amd64.tar.gz"
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+# Dynamically detect architecture and download the correct Go binary
+RUN set -eux; \
+    arch="$(dpkg --print-architecture)"; \
+    case "${arch}" in \
+        amd64) export GO_ARCH='amd64' ;; \
+        arm64) export GO_ARCH='arm64' ;; \
+        armhf) export GO_ARCH='armv6l' ;; \
+        i386)  export GO_ARCH='386' ;; \
+        *) echo "Unsupported architecture: ${arch}"; exit 1 ;; \
+    esac; \
+    wget -O /tmp/go.tar.gz "https://dl.google.com/go/go${GO_VERSION}.linux-${GO_ARCH}.tar.gz"; \
+    tar -C /usr/local -xzf /tmp/go.tar.gz; \
+    rm /tmp/go.tar.gz
 
 # Setup runtime environement
 ENV GOPATH=/go
@@ -34,6 +44,6 @@ chmod +x /usr/local/bin/gobuild
 
 WORKDIR $GOPATH/src
 
-EXPOSE 8080
+EXPOSE 5001
 
 CMD ["/bin/bash"]
